actualizacion primera carga

--- a/mksolucion/Areas/portal/Views/web.config
+++ b/mksolucion/Areas/portal/Views/web.config
@@ -19,6 +19,7 @@
         <add namespace="System.Web.Optimization" />
         <add namespace="mksolucion" />
         <add namespace="Kendo.Mvc.UI" />
+        <add namespace="Helpers.Helpers"/>
       </namespaces>
     </pages>
   </system.web.webPages.razor>
