--- a/mksolucion/mksolucion.csproj
+++ b/mksolucion/mksolucion.csproj
@@ -447,6 +447,18 @@
     <Compile Include="Migrations\201707052008024_actualizacion_presicion_idpadrecontacrto.Designer.cs">
       <DependentUpon>201707052008024_actualizacion_presicion_idpadrecontacrto.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201707071417158_actualizacion_remitente_contacto.cs" />
+    <Compile Include="Migrations\201707071417158_actualizacion_remitente_contacto.Designer.cs">
+      <DependentUpon>201707071417158_actualizacion_remitente_contacto.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201707071441070_actualizacion_remitente_contacto1.cs" />
+    <Compile Include="Migrations\201707071441070_actualizacion_remitente_contacto1.Designer.cs">
+      <DependentUpon>201707071441070_actualizacion_remitente_contacto1.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201707071442345_actualizacion_remitente_contacto2.cs" />
+    <Compile Include="Migrations\201707071442345_actualizacion_remitente_contacto2.Designer.cs">
+      <DependentUpon>201707071442345_actualizacion_remitente_contacto2.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\CaptchaResponse.cs" />
@@ -797,6 +809,15 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201707052008024_actualizacion_presicion_idpadrecontacrto.resx">
       <DependentUpon>201707052008024_actualizacion_presicion_idpadrecontacrto.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201707071417158_actualizacion_remitente_contacto.resx">
+      <DependentUpon>201707071417158_actualizacion_remitente_contacto.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201707071441070_actualizacion_remitente_contacto1.resx">
+      <DependentUpon>201707071441070_actualizacion_remitente_contacto1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201707071442345_actualizacion_remitente_contacto2.resx">
+      <DependentUpon>201707071442345_actualizacion_remitente_contacto2.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
